--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,6 +2,6 @@ book_filename: "the-unix-workbench"
 chapter_name: "Chapter "
 repo: https://github.com/seankross/the-unix-workbench
 output_dir: docs
-rmd_files: ["index.Rmd", "01-What-is-Unix.Rmd", "02-Getting-Unix.Rmd", "03-Command-Line-Basics.Rmd"]
+#rmd_files: ["index.Rmd", "01-What-is-Unix.Rmd", "02-Getting-Unix.Rmd", "03-Command-Line-Basics.Rmd"]
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
